Main page design

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<title>자라나라나무나무</title>
+	<title>자라나라 나무나무</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="assets/css/index.css">
@@ -17,7 +16,7 @@
 		<form action="http://growtrees.nefus.kr:8000/login" class="form-horizontal" method="POST">
 			<div class="inputform row form-group">
 				<input type="text" class="col-md-offset-4 col-md-4 col-xs-offset-2 col-xs-8 maininput" name="user_id" value="아이디">				
-				<input type="password" class="col-md-offset-4 col-md-4 col-xs-offset-2 col-xs-8 maininput" name="password" value="비밀번호">
+				<input type="password" class="col-md-offset-4 col-md-4 col-xs-offset-2 col-xs-8 maininput" name="password" value="****">
 			</div>
 			<div class="row form-group">
 				<div class="col-md-offset-4 col-md-4 col-xs-offset-2 col-xs-8"">
