--- a/public/main.html
+++ b/public/main.html
@@ -14,23 +14,49 @@
 		<div id="logo">자라나라 나무나무</div>
 		<ul id="menuList">
 			<div id="search" class="dropdown">
-				<li  class="menu dropdown-toggle" data-toggle="dropdown">
+				<li class="menu" onclick="search();">
 					<a href="javascript:void(0)"><img src="assets/img/search.png" alt="" /></a>
 				</li>
-				<ul class="dropdown-menu dropdown-menu-right">
-					<li><a href="#">HTML</a></li>
-					<li><a href="#">CSS</a></li>
-					<li><a href="#">JavaScript</a></li>
-				</ul>
+			</div>
+			<div id="searchlist">
+				<a href="#">
+					<div class="datalist">
+						<img class="dataimg" src="assets/img/test.png" alt="">
+						<strong>title<br /></strong>
+					</div>
+				</a>
+				<a href="#">
+					<div class="datalist">
+						<img class="dataimg" src="assets/img/test.png" alt="">
+						text text text ㅅext text text text1 text2 text3 text4 text5 text6 text7 text8
+					</div>
+				</a>
+				<a href="#">
+					<div class="datalist">
+						<img class="dataimg" src="assets/img/test.png" alt="">
+						text text text text text text text1 text2 text3 text4 text5 text6 text7 text8 
+					</div>
+				</a>
+				<a href="#">
+					<div class="datalist">
+						<img class="dataimg" src="assets/img/test.png" alt="">
+						text text text text text text text1 text2 text3 text4 text5 text6 text7 text8 
+					</div>
+				</a>
+				<a href="#">
+					<div class="datalist">
+						<img class="dataimg" src="assets/img/test.png" alt="">
+						text text text text text text text1 text2 text3 text4 text5 text6 text7 text8 
+					</div>
+				</a>
 			</div>
 			<div id="profile" class="dropdown">
 				<li class="menu dropdown-toggle" data-toggle="dropdown">
 					<a href=""><img src="assets/img/profile.png" alt="" /></a>
 				</li>
 				<ul class="dropdown-menu dropdown-menu-right">
-					<li><a href="#">HTML</a></li>
-					<li><a href="#">CSS</a></li>
-					<li><a href="#">JavaScript</a></li>
+					<li><a href="#">프로필 정보</a></li>
+					<li><a href="#">프로필 수정</a></li>
 				</ul>
 			</div>
 			<div id="menu" class="dropdown">
@@ -38,9 +64,9 @@
 					<a href=""><img src="assets/img/menu.png" alt="" /></a>
 				</li>
 				<ul class="dropdown-menu dropdown-menu-right">
-					<li><a href="#">HTML</a></li>
-					<li><a href="#">CSS</a></li>
-					<li><a href="#">JavaScript</a></li>
+					<li><a href="#">메뉴</a></li>
+					<li><a href="#">ㅁㄴㅁㄴㅇㅁㄴ</a></li>
+					<li><a href="#">ㅁㄴㅇㅁㄴㅇㅁㄴㅇ</a></li>
 				</ul>
 			</div>
 		</ul>
@@ -48,40 +74,50 @@
 	<!-- Main -->
 	<div id="main" class="container-fluid">
 		<div class="row margin">
-			<div class="col-md-8 section">
+			<div class="col-md-10 section">
 				<div class="col-md-4 flowerpot">
-					<img src="assets/img/pot.png" class="pot" alt="">
-					<div class="potname">team name</div>
+					<a href="">
+						<img src="assets/img/pot.png" class="pot" alt="">
+						<div class="potname">team name<span class="badge participant">5</span></div>
+					</a>
 				</div>
 				<div class="col-md-4 flowerpot">
-					<img src="assets/img/pot.png" class="pot" alt="">
-					<div class="potname">team name</div>
+					<a href="">
+						<img src="assets/img/pot.png" class="pot" alt="">
+						<div class="potname">team name<span class="badge participant">5</span></div>
+					</a>
 				</div>
 				<div class="col-md-4 flowerpot">
-					<img src="assets/img/pot.png" class="pot" alt="">
-					<div class="potname">team name</div>
+					<a href="">
+						<img src="assets/img/pot.png" class="pot" alt="">
+						<div class="potname">team name<span class="badge participant">5</span></div>
+					</a>
 				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-8 section">
+			<div class="col-md-10 section">
 				<div class="col-md-4 flowerpot">
-					<img src="assets/img/pot.png" class="pot" alt="">
-					<div class="potname">team name</div>
+					<a href="">
+						<img src="assets/img/pot.png" class="pot" alt="">
+						<div class="potname">team name<span class="badge participant">5</span></div>
+					</a>
 				</div>
 				<div class="col-md-4 flowerpot">
-					<img src="assets/img/pot.png" class="pot" alt="">
-					<div class="potname">team name</div>
+					<a href="">
+						<img src="assets/img/pot.png" class="pot" alt="">
+						<div class="potname">team name<span class="badge participant">5</span></div>
+					</a>
 				</div>
 				<div class="col-md-4 flowerpot">
-					<img src="assets/img/addpot.png" class="pot" alt="">
-					<div class="potname">team name</div>
+					<a href="">
+						<img src="assets/img/addpot.png" class="pot" alt="">
+						<div class="potname">Add Pot!</div>
+					</a>
 				</div>
 			</div>
 		</div>
 	</div>
-
-
 	<!-- Script -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
