--- a/public/project.html
+++ b/public/project.html
@@ -247,11 +247,11 @@
 		<div id="sun">
 			<img src="assets/img/sun.png" alt="D-Day" width="100" height="100">
 		</div>
-
-		<div id="waterspread">
-			<img src="assets/img/waterspread.png" width="100" height="60">
-		</div>
-
+		<a href="javascript:void(0);">
+			<div id="waterspread">
+				<img src="assets/img/waterspread.png" width="100" height="60"  onclick="chattingdown();">
+			</div>
+		</a>
 		<div id="chat">
 			<div id="chattitle">
 				채팅
