Message Auto Link & jQuery Reg

--- a/public/project.html
+++ b/public/project.html
@@ -423,13 +423,13 @@
 						User1
 					</div>
 					<div class="message">
-						환영합니다
+						환영합니다 http://naver.com
 					</div>
 				</div>
 			</div>
 			<form>
 				<input type="text" class="form-control">
-				<button type="button">
+				<button type="button" onclick="checkMessage();">
 					 <span class="glyphicon glyphicon-send"></span>
 				</button> 
 			</form>
